--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts"
+    "dev": "tsx watch --env-file .env src/server.ts",
+    "build": "tsup src --out-dir build",
+    "start": "node build/server.js"
+
   },
   "keywords": [],
   "author": "",
@@ -14,12 +17,14 @@
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
     "prisma": "^5.16.2",
+    "tsup": "^8.1.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.16.2",
+    "@swc/core": "^1.6.13",
     "dayjs": "^1.11.11",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
