--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "tsx watch --env-file .env src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js"
-
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
     "prisma": "^5.16.2",
@@ -22,9 +22,12 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.16.2",
     "@swc/core": "^1.6.13",
+    "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
