--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.16.2",
+    "@supabase/supabase-js": "^2.44.4",
     "@swc/core": "^1.6.13",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
     "fastify": "^4.28.1",
+    "fastify-multer": "^2.0.3",
     "fastify-type-provider-zod": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
