--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,15 @@
-
-{ "version": 2, "rewrites": [{ "source": "src/(.*)", "destination": "/src" }] }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/src/index.ts"
+    }
+  ]
+}
